--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,14 @@ requires-python = ">=3.13.3"
 dependencies = [
     "fastf1>=3.6.0",
     "ipykernel>=6.30.0",
-    "numpy>=2.3.2",
-    "pandas>=2.3.1",
-    "torch>=2.7.1",
+    "joblib>=1.3.0",
+    "matplotlib>=3.5.0",
+    "numpy>=1.21.0",
+    "pandas>=1.5.0",
+    "plotly>=5.15.0",
+    "scikit-learn>=1.3.0",
+    "seaborn>=0.11.0",
+    "streamlit>=1.28.0",
+    "torch>=2.0.0",
     "tqdm>=4.67.1",
 ]
