--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pit-predict"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8,<3.12"
 dependencies = [
     "fastf1>=3.6.0",
     "ipykernel>=6.30.0",
@@ -15,6 +15,6 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "seaborn>=0.11.0",
     "streamlit>=1.28.0",
-    "torch>=2.0.0",
+    "torch>=1.13.0,<2.1.0",
     "tqdm>=4.67.1",
 ]
