--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch>=1.13.0,<2.1.0
 streamlit>=1.28.0
 pandas>=1.5.0
-numpy>=1.21.0
+numpy==1.23.0
 scikit-learn>=1.2.0,<1.4.0
 plotly>=5.15.0
 joblib>=1.2.0
