--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-torch>=1.13.0,<2.1.0
-streamlit>=1.28.0
-pandas>=1.5.0
+torch
+streamlit
+pandas
 numpy
-scikit-learn>=1.2.0,<1.4.0
-plotly>=5.15.0
-joblib>=1.2.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-requests>=2.25.0
+scikit-learn
+plotly
+joblib
+matplotlib
+seaborn
+requests
